# anomaly-detection

./: .gitignore  LICENSE  README.md  docker-compose.yml
.docker/flink/: flink-conf.yaml
.docker/grafana/: provisioning-dashboards.yml  provisioning-datasources.yml
.docker/kafka/: create-topics.sh  kafka.env
.docker/prometheus/: prometheus.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
dashboards/grafana-provisioning/dashboards/: pipeline-health.json
data-generator/: .dockerignore  Dockerfile  pyproject.toml
data-generator/src/: generator.py  generator_old.py
data-generator/tests/: test_generator.py
docs/: api.md  architecture-diagram.md  architecture.md  configuration.md  future-steps.md
specs/001-grid-anomaly-detection/: plan.md  spec.md  tasks.md
specs/001-grid-anomaly-detection/contracts/: grid-events.avsc  register-schemas.sh
stream-processor/: .dockerignore  Dockerfile  dependency-reduced-pom.xml  pom.xml
stream-processor/src/main/java/com/grid/: AnomalyDetectionJob.java  MinIODemoJob.java
stream-processor/src/main/java/com/grid/events/: AnomalyEvent.java  SensorReading.java  SeverityLevel.java
stream-processor/src/main/java/com/grid/functions/: AnomalyDetectorFunction.java  MovingAverageFunction.java
stream-processor/src/main/java/com/grid/model/: AnomalyEventPojo.java  SensorReadingPojo.java
stream-processor/src/main/java/com/grid/serde/: AvroDeserializationSchema.java  AvroSerializationSchema.java  JsonDeserializationSchema.java  JsonSerializationSchema.java
(+3 files in other folders)
